# clusterizer

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-0c6016102ff4415efaaaea99a3f96eb77bf7f6bca01fd9fba96c211dbc042853.json  (+66 more)
api/: Cargo.toml
api/src/: client.rs  get.rs  (+3 more)
cli/: Cargo.toml
cli/src/: args.rs  client.rs  main.rs
client/: Cargo.toml
client/src/: args.rs  client.rs  error.rs  lib.rs  main.rs  platforms.rs  result.rs  types.rs  util.rs
common/: Cargo.toml
common/src/: error.rs  id.rs  lib.rs  types.rs
common/src/errors/: auth_error.rs  create_file_error.rs  fetch_tasks_error.rs  infallible.rs  mod.rs  not_found.rs  register_error.rs  submit_result_error.rs  valdiate_fetch_error.rs  validate_err_error.rs  validate_error.rs  validate_fetch_error.rs  validate_ok_error.rs  validate_state_error.rs  validate_submit_err.rs  validate_submit_error.rs
common/src/messages/: mod.rs  register.rs  submit.rs  submit_request.rs
common/src/records/: assignment.rs  file.rs  mod.rs  platform.rs  platform_runner.rs  project.rs  project_runner.rs  project_version.rs  result.rs  task.rs  user.rs
common/src/requests/: create_file_request.rs  fetch_tasks_request.rs  mod.rs  register_request.rs  submit_result_request.rs  validate_err_request.rs  validate_fetch_request.rs  validate_ok_request.rs  validate_submit_request.rs
common/src/responses/: mod.rs  register_response.rs
common/src/types/: assignment.rs  assignment_state.rs  duration.rs  id.rs  interval.rs  mod.rs  platform.rs  project.rs  project_version.rs  result.rs  result_state.rs  task.rs  user.rs  validate_state.rs
server/: .env  Cargo.toml  example.env
server/.sqlx/: query-0115ccc7673022c6b942fec6ce5fe24dd36f3b7bf5dfa7b6c56b0ec8f1fc4a6b.json  query-0a85c57626456d79f6a57c607437b2e6b5a31199b622f28ca3692fe60eec53c9.json  query-0addfba67e093d0471b35ff5647413c5de92cbebeca249d519a43074862bc98e.json  query-0d6d91c4e0acb78e4fda4df1804d430966e8ae83a168de0d3444bb8a4c7b1051.json  query-0e3b84e9511aa454ff7e7027985c67ce20eadfc6affb26e814af406c2a64f9d2.json  query-0fbc6c31fbd780f76738a14f5e0b19dac70d34e283d16169617ad59af7f04ff5.json  query-10780f6fbc25a26cb46dec7bb5d47b9f00627ee7fdbc36d923db1cdf7f06aedf.json  query-110699ecb02de724e7b96c93a01edb9ea3cd06c2c1189c29703b35f4894d7521.json  query-1260e6fd3c1f30f651d1f86bf86af3351a6629a942b732ccf6740b2e683eedae.json  query-12856967f604c24930149e34844c17c1c2cfc8193fb0b6aa9a5d17baf9e5c6d1.json  query-13b2878a958300c53e042824690bb0f4e8bba048af02db76a8e3ed403a2e0c5f.json  query-167feb9a08a6cded140b1f2b38e9105d29e17356e756167e11b129d2b93bcf09.json  query-179a66ba470325232cccfbff5eb9fb9160b3c33f2fe845feeaa6ed3a006332cc.json  query-20165b7e36b4f26a3cf625d04181f79edfda9aceff37285639e4b643823d56f9.json  query-237bcc75f090ec14f8703b28013f94f224b083c68ff691b6bbeffdb171a83a47.json  query-24e0cbd2a2d8bc656eded7dbec02ab969690a8e0d2feb3c96637afa996206b8f.json  query-25acb3a0a968c72a708d842e209a60e17066d80cd0a0c404a4031dae4df01781.json  query-29356ceade5be500173e8655241a35973a4333a3d19ec0b9e3dfabbd0bc97b8c.json  query-2daeacfdb74c4d12e2e5801d58931e6b9e29f27da54f8ed525dc71e8f3162a0a.json  query-2ef52d712fe9cda17273356da3ee0ad5a1bc3133f8aa01f8b14d5ae84f889881.json  query-37787d0e5dbb0fd034a68efbe9eeb11432326d631d24b5ebaea76946aa913df1.json  query-388759d95b0eab3626a0b06330964fab1d44214a7f136306282a38c25536b22f.json  query-3dd9d1f11dbcdecaf9c74aae7e7af4801a86cf6a31db67e4531e677aeea5f1e9.json  query-420f3df90dfb4025ef667bfac5d4c8f9c35818097734bd5ef90fe507cad77786.json  query-428b183a56111200d7a00176e861c7c7b237943843b376a581d725c5accaeaf9.json  query-4f178eab991f5c742473223ca3c84b9f643a76bdea7f6a508fe402d90d761fdf.json  query-4f28c9855a87500c39fc4e88308b16b87bf12743e25be5d1707c07edd8d94dfd.json  query-5008175ade98bc9947127cbdfb3cfd0e1d578432b0ec081732c79d49d843abfe.json  query-54a247ee9e473bf6e4b0de3035c0f0e211625d90dad1d3d07dd17fcf1e817b9f.json  query-57cc377f1f18d08a4cfe4dcd6bbc378da1246c428764a7f45d1f04cedc996f4a.json  query-59a324ac031640e3b5f37b9be0e6f417b321a029483787bc505297e0de325641.json  query-5a7e0d775074335094b4e5e13fe9628db2f65fd407f22b21595bfb854c6e62fd.json  query-62f56598373964d2870469ac45775a630db700a2adf7a8a61426105f5128f491.json  query-6801d610f6f692718214a9ab196b964a94564d5eaf6e15bf97686bdccc5593cc.json  query-6bdc70e2c27f350648875584a1f1ca9164eb74493a155561b47263274d2b98f9.json  query-7025d6ef0382f6ea2d43d3a8b5748f7a54c4910e449bbde7b683743f85b501e1.json  query-71c5f3dc504e67ae2a50509256f2d883e6806c44c0d24a9f3bd1ca153aecaf5b.json  query-71c855f936697605ccfd2869c81843f1842eee48fbadd80550e982f0dd308a79.json  query-7449cf23595c3fddc78d653107a2bb0591aaff5156e729793f47ce91716fe26a.json  query-758af5d6a249187a308a1746d22636256031600e6a52fc94e57880b40e306b2b.json  (+42 more)
server/migrations/: 20240507182950_create_users.sql  20250426220809_init.sql
server/src/: app.rs  auth.rs  error.rs  main.rs  query.rs  result.rs  state.rs
server/src/result/: mod.rs  status.rs
server/src/routes/: assignments.rs  create_file.rs  fetch_tasks.rs  mod.rs  platforms.rs  project_versions.rs  projects.rs  register.rs  result_validation.rs  results.rs  submit_result.rs  tasks.rs  users.rs  validate_err.rs  validate_fetch.rs  validate_ok.rs  validate_submit.rs
server/src/tasks/: mod.rs  update_expired_assignments.rs
server/src/util/: assignment_deadline.rs  mod.rs  select.rs  set_assignment_state.rs  set_result_state.rs
util/: Cargo.toml
validator/: Cargo.toml
validator/src/: main.rs
(+3 files in other folders)
