[package]
name = "clusterizer-common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", optional = true, features = ["postgres"]}
thiserror = "2.0.12"

[features]
sqlx = ["dep:sqlx"]
