[package]
name = "clusterizer-common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.2", optional = true, features = ["query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_qs = { version = "1.1.1", optional = true }
sqlx = { version = "0.8.6", optional = true, features = ["postgres"]}
thiserror = "2.0.18"

[features]
sqlx = ["dep:sqlx"]
reqwest = ["dep:reqwest", "dep:serde_qs"]
