[package]
name = "clusterizer-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
chrono = "0.4.41"
clusterizer-common = { version = "0.1.0", path = "../common", features = ["sqlx"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
serde = "1.0.219"
sha2 = "0.10.9"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.44.2", features = ["full"] }
