[package]
name = "clusterizer-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
base64 = "0.22.1"
clusterizer-common = { version = "0.1.0", path = "../common", features = ["sqlx"] }
dotenvy = "0.15.7"
hmac = "0.13.0"
serde = "1.0.228"
serde_qs = { version = "1.1.1", features = ["axum"] }
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
